Fix content align center

--- a/website/static/css/layout.css
+++ b/website/static/css/layout.css
@@ -23,27 +23,27 @@
   height: auto;
   padding: 5px 10px;
 }
-  .fixedHeaderContainer header a:nth-child(2):hover {
-    background: #f6fafa;
-  }
+.fixedHeaderContainer header a:nth-child(2):hover {
+  background: #f6fafa;
+}
 
-  .fixedHeaderContainer header a:nth-child(2) h3 {
-    background-image: url("../img/arrow-version.png");
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: 24px 24px;
-    margin: 0;
-    padding: 5px 0;
-    padding-right: 34px;
-    color: #3d3d3d;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: none;
-  }
+.fixedHeaderContainer header a:nth-child(2) h3 {
+  background-image: url("../img/arrow-version.png");
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: 24px 24px;
+  margin: 0;
+  padding: 5px 0;
+  padding-right: 34px;
+  color: #3d3d3d;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: none;
+}
 
-    .fixedHeaderContainer header a:nth-child(2):hover h3 {
-      background-image: url("../img/arrow-next.png");
-    }
+.fixedHeaderContainer header a:nth-child(2):hover h3 {
+  background-image: url("../img/arrow-next.png");
+}
 
 .singleRowMobileNav.navPusher {
   padding-top: 90px;
@@ -53,53 +53,57 @@
   background: #f6fafa;
 }
 
-  .docsNavContainer .toc .navBreadcrumb {
-    background: none;
-    border: none;
-  }
-
-.toc .toggleNav .navGroup {
-  border-bottom: 1px solid rgba(61,61,61,.1);
+.docsNavContainer .toc .navBreadcrumb {
+  background: none;
+  border: none;
 }
 
-  .toc .toggleNav .navGroup .navGroupCategoryTitle {
-    font-size: 16px;
-  }
+.docsNavContainer .toc .toggleNav .subNavGroup ul {
+  padding-left: 10px;
+}
 
-  .toc .toggleNav .navGroup ul {
-    margin-bottom: 8px;
-    padding-left: 0;
-  }
+.toc .toggleNav .navGroup {
+  border-bottom: 1px solid rgba(61, 61, 61, 0.1);
+}
 
-    .toc .toggleNav ul li a {
-      font-size: 16px;
-      color: #3d3d3d;
-    }
+.toc .toggleNav .navGroup .navGroupCategoryTitle {
+  font-size: 16px;
+}
 
-    .toc .toggleNav ul li.navListItemActive a {
-      font-weight: bold;
-    }
+.toc .toggleNav .navGroup ul {
+  margin-bottom: 8px;
+  padding-left: 0;
+}
 
-    .toc .navGroup.subNavGroup {
-      margin-bottom: 8px;
-    }
-      
-      .toc .toggleNav .navGroup .navGroupSubcategoryTitle {
-        font-size: 14px;
-        color: #3d3d3d;
-        font-weight: 600;
-        opacity: .4;
-      }
+.toc .toggleNav ul li a {
+  font-size: 16px;
+  color: #3d3d3d;
+}
 
-      .toc .navGroups .navGroup .subNavGroup:last-child {
-        border-bottom: 0;
-      }
+.toc .toggleNav ul li.navListItemActive a {
+  font-weight: bold;
+}
 
-      .toc .navGroups .navGroup .navListItem + .subNavGroup {
-        border-top: 1px solid rgba(61,61,61,.1);
-        margin-top: 6px;
-        padding-top: 8px;
-      }
+.toc .navGroup.subNavGroup {
+  margin-bottom: 8px;
+}
+
+.toc .toggleNav .navGroup .navGroupSubcategoryTitle {
+  font-size: 14px;
+  color: #3d3d3d;
+  font-weight: 600;
+  opacity: 0.4;
+}
+
+.toc .navGroups .navGroup .subNavGroup:last-child {
+  border-bottom: 0;
+}
+
+.toc .navGroups .navGroup .navListItem + .subNavGroup {
+  border-top: 1px solid rgba(61, 61, 61, 0.1);
+  margin-top: 6px;
+  padding-top: 8px;
+}
 
 @media only screen and (min-width: 1024px) {
   .fixedHeaderContainer {
@@ -135,9 +139,9 @@
     height: auto;
   }
 
-    .fixedHeaderContainer header a:first-child img {
-      height: 40px;
-    }
+  .fixedHeaderContainer header a:first-child img {
+    height: 40px;
+  }
 
   .fixedHeaderContainer header a:nth-child(2) {
     display: block;
@@ -170,22 +174,22 @@
   text-transform: uppercase;
 }
 
-.onPageNav > .toc-headings{
+.onPageNav > .toc-headings {
   padding-top: 20px;
 }
 
-  .onPageNav > .toc-headings > li {
-    padding-bottom: 20px;
-  }
+.onPageNav > .toc-headings > li {
+  padding-bottom: 20px;
+}
 
-    .onPageNav > .toc-headings > li > a {
-      font-size: 14px;
-    }
+.onPageNav > .toc-headings > li > a {
+  font-size: 14px;
+}
 
-    .onPageNav .toc-headings > li > a.active {
-      color: #3d3d3d;
-      font-weight: normal;
-    }
+.onPageNav .toc-headings > li > a.active {
+  color: #3d3d3d;
+  font-weight: normal;
+}
 
 @media only screen and (min-width: 1024px) {
   .onPageNav {
@@ -206,34 +210,34 @@
 .docs-footer {
   display: flex;
   align-items: stretch;
-  border-top: 1px solid rgba(60,62,76,.05);
+  border-top: 1px solid rgba(60, 62, 76, 0.05);
   margin: 0 20px;
   padding: 33px 0;
 }
 
-  .footer-icon {
-    display: flex;
-    align-items: center;
-  }
+.footer-icon {
+  display: flex;
+  align-items: center;
+}
 
-  .footer-body {
-    flex: 1;
-    text-align: right;
-  }
+.footer-body {
+  flex: 1;
+  text-align: right;
+}
 
-    .footer-body .wrapper {
-      padding: 0;
-    }
+.footer-body .wrapper {
+  padding: 0;
+}
 
-    .footer-body a span {
-      font-size: 14px;
-      color: #3d3d3d;
-      opacity: .4;
-    }
-  
-    .footer-body span {
-      display: block;
-    }
+.footer-body a span {
+  font-size: 14px;
+  color: #3d3d3d;
+  opacity: 0.4;
+}
+
+.footer-body span {
+  display: block;
+}
 
 @media only screen and (min-width: 1024px) {
   .docs-footer {
@@ -242,28 +246,32 @@
     padding: 0;
   }
 
-    .footer-icon {
-      width: 363px;
-      padding-left: 50px;
-      background: #f6fafa;
-    }
+  .footer-icon {
+    width: 363px;
+    padding-left: 50px;
+    background: #f6fafa;
+  }
 
-      .footer-body .wrapper {
-        border-top: 1px solid rgba(60,62,76,.05);
-        margin: 0 40px;
-        padding: 30px 0;
-      }
+  .footer-body .wrapper {
+    border-top: 1px solid rgba(60, 62, 76, 0.05);
+    margin: 0 40px;
+    padding: 30px 0;
+  }
 
-      .footer-body a span {
-        display: inline;
-        margin-left: .25em;
-      }
+  .footer-body a span {
+    display: inline;
+    margin-left: 0.25em;
+  }
 }
 
 /* Limit post column to 700px */
 @media only screen and (min-width: 1024px) {
   .post {
     max-width: 700px;
-    margin-right: 0;
+    margin: 0 auto;
+  }
+  .docs-prevnext {
+    max-width: 700px;
+    margin: 50px auto 30px auto;
   }
 }
